--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     font-family: "Quicksand";
     color: #333;
 }
+
 .navbar {
     padding: 20px;
     display: flex;
@@ -13,20 +14,25 @@
     margin: 0 auto;
     border-bottom: 1px solid #f2f2f2;
 }
+
 .navbar h1 {
     color: #f1356d;
 }
+
 .navbar .links {
     margin-left: auto;
 }
+
 .navbar a {
     margin-left: 16px;
     text-decoration: none;
     padding: 6px;
 }
+
 .navbar a:hover {
     color: #f1356d;
 }
+
 .content {
     max-width: 600px;
     margin: 40px auto;
@@ -34,7 +40,8 @@
 }
 
 .home,
-.create {
+.create,
+.blog-details {
     max-width: 600px;
     margin: 30px auto;
 }
@@ -44,11 +51,17 @@
     margin: 20px 0;
     border-bottom: 1px solid #fafafa;
 }
+
 .blog-preview:hover {
     box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
 }
+
 .blog-preview h2 {
     font-size: 20px;
     color: #f1356d;
     margin-bottom: 8px;
+}
+
+.blog-preview a {
+    text-decoration: none;
 }
